--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: spfilteR
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Eigenvector-Based Semiparametric Filtering of Spatial Autocorrelation
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Authors@R: person("Sebastian", "Juhl", email = "sebastian.juhl@gess.uni-mannheim.de",
+  role = c("aut", "cre"))
+Description: Tools to eigendecompose (transformed) spatial connectivity matrices and perform supervised or unsupervised semiparametric spatial filtering in a regression framework.
+License: GPL-3
+BugReports: https://github.com/sjuhl/spfilteR/issues
+Depends: R (>= 3.5.0)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
