--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(MI.sf)
 export(MI.vec)
 export(getEVs)
 export(getMoran)
+export(glmFilter)
 export(lmFilter)
 export(partialR2)
 export(vif.ev)
