--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: spfilteR
 Type: Package
-Title: Eigenvector-Based Semiparametric Filtering of Spatial Autocorrelation
+Title: Eigenvector-Based Semiparametric Filtering of Spatial Autocorrelation in (Generalized) Linear Models
 Version: 0.1.0
 Authors@R: person("Sebastian", "Juhl", email = "sebastian.juhl@gess.uni-mannheim.de",
   role = c("aut", "cre"))
-Description: Tools to eigendecompose (transformed) spatial connectivity matrices and perform supervised or unsupervised semiparametric spatial filtering in a regression framework.
+Description: Tools to eigendecompose (transformed) spatial connectivity matrices and perform supervised or unsupervised semiparametric spatial filtering in a regression framework. The package supports unsupervised spatial filtering in standard linear as well as some generalized linear regression models.
 License: GPL-3
 BugReports: https://github.com/sjuhl/spfilteR/issues
-Depends: R (>= 3.5.0)
+Imports: stats
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
