--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,3 +9,16 @@ export(glmFilter)
 export(lmFilter)
 export(partialR2)
 export(vif.ev)
+importFrom(grDevices,rgb)
+importFrom(graphics,abline)
+importFrom(graphics,legend)
+importFrom(graphics,points)
+importFrom(graphics,polygon)
+importFrom(stats,cor)
+importFrom(stats,dpois)
+importFrom(stats,filter)
+importFrom(stats,optim)
+importFrom(stats,pnorm)
+importFrom(stats,pt)
+importFrom(stats,sd)
+importFrom(stats,var)
