--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ Authors@R: person("Sebastian", "Juhl", email = "sebastian.juhl@gess.uni-mannheim
 Description: Tools to eigendecompose (transformed) spatial connectivity matrices and perform supervised or unsupervised semiparametric spatial filtering in a regression framework. The package supports unsupervised spatial filtering in standard linear as well as some generalized linear regression models.
 License: GPL-3
 BugReports: https://github.com/sjuhl/spfilteR/issues
+Depends: R (>= 3.5.0)
 Imports: stats
 Encoding: UTF-8
 LazyData: true
