--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,7 @@ License: GPL-3
 BugReports: https://github.com/sjuhl/spfilteR/issues
 Depends: R (>= 3.5.0)
 Imports: stats
+Suggests: testthat
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
