--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ importFrom(graphics,abline)
 importFrom(graphics,legend)
 importFrom(graphics,points)
 importFrom(graphics,polygon)
+importFrom(stats,complete.cases)
 importFrom(stats,cor)
 importFrom(stats,dpois)
 importFrom(stats,filter)
