imports 'plot' from graphics

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(vif.ev)
 importFrom(grDevices,rgb)
 importFrom(graphics,abline)
 importFrom(graphics,legend)
+importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(graphics,polygon)
 importFrom(stats,complete.cases)
