--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,11 @@ URL: https://github.com/sjuhl/spfilteR
 BugReports: https://github.com/sjuhl/spfilteR/issues
 Depends: R (>= 3.5.0)
 Imports: stats
-Suggests: testthat
+Suggests: 
+    testthat,
+    knitr,
+    rmarkdown
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+VignetteBuilder: knitr
