--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,8 @@ Imports: stats
 Suggests: 
     testthat,
     knitr,
-    rmarkdown
+    rmarkdown,
+	pkgdown
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
