--- a/.travis.yml
+++ b/.travis.yml
@@ -5,16 +5,17 @@ cache: packages
 
 r_packages:
   - covr
+#  - pkgdown
 
 after_success:
   - Rscript -e 'library(covr); covr::codecov()'
-  - Rscript -e 'library(pkgdown); pkgdown::build_site()'
+#  - Rscript -e 'library(pkgdown); pkgdown::build_site()'
 
-deploy:
-  provider: pages
-  skip-cleanup: true
-  github-token: $GH_PAT
-  keep-history: true
-  local-dir: docs
-  on:
-    branch: master
+#deploy:
+#  provider: pages
+#  skip-cleanup: true
+#  github-token: $GH_PAT
+#  keep-history: true
+#  local-dir: docs
+#  on:
+#    branch: master
