--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,8 +13,7 @@ Imports: stats
 Suggests: 
     testthat,
     knitr,
-    rmarkdown,
-	pkgdown
+    rmarkdown
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
