--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,9 @@ after_success:
 
 deploy:
   provider: pages
-  cleanup: true
+  skip_cleanup: true
   github_token: $GH_PAT
+  keep_history: true
   local_dir: docs
   on:
     branch: master
