add & test MI.decomp()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(plot,spfilter)
 S3method(print,spfilter)
 S3method(summary,spfilter)
 S3method(vcov,spfilter)
+export(MI.decomp)
 export(MI.ev)
 export(MI.resid)
 export(MI.sf)
