--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(summary,spfilter)
 S3method(vcov,spfilter)
 export(MI.decomp)
 export(MI.ev)
+export(MI.local)
 export(MI.resid)
 export(MI.sf)
 export(MI.vec)
