include vp() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(glmFilter)
 export(lmFilter)
 export(partialR2)
 export(vif.ev)
+export(vp)
 importFrom(grDevices,rgb)
 importFrom(graphics,abline)
 importFrom(graphics,legend)
