register S3 method for "vpart" objects & import dnbinom

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(coef,spfilter)
 S3method(plot,spfilter)
 S3method(print,spfilter)
+S3method(print,vpart)
 S3method(summary,spfilter)
 S3method(vcov,spfilter)
 export(MI.decomp)
@@ -25,6 +26,7 @@ importFrom(graphics,points)
 importFrom(graphics,polygon)
 importFrom(stats,complete.cases)
 importFrom(stats,cor)
+importFrom(stats,dnbinom)
 importFrom(stats,dpois)
 importFrom(stats,filter)
 importFrom(stats,optim)
